Fixed a problem where you had to check "Include office days" even if you intended 0.